--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         <section class="app_banner_main">
           <div class="card-hightlight">
             <span class="highlight-card">Kategori Produk-Produk</span>
+            <p>&nbsp;</p>
+            <p>Percetakan&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Souvenir&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Packaging&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Advertising&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Plakat&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Undangan</p>
+            <p>&nbsp;</p>
+            <p>Ruang Cipta Nusantara hadir menjadi solusi untuk segala kebutuhan cetak custom Anda. <br>Kami siap membantu Anda untuk mewujudkan ide kreatifitas produk yang berkualitas tinggi.</p>
           </div>
           <div class="container">
             <!-- Kategori produk baris pertama -->
