--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
   <!-- css -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/responsive.css" />
 </head>
 
 <body class="main-layout">
+
+  <!-- navigation top up-->
+  <!-- <div class="include-navbar_up"></div> -->
+
   <header>
     <div class="header">
 
-      <div class="white_bg">
         <!-- navigation -->
         <div class="include-navbar"></div>
 
@@ -71,7 +77,8 @@
             <span class="highlight-card">Kategori Produk-Produk</span>
             <p>&nbsp;</p>
             <p>
-              Percetakan&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Souvenir&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Packaging&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Advertising&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Plakat&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Undangan
+              Percetakan&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Souvenir&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Packaging&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Advertising&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Plakat&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Undangan&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Foto
+              & Cinematography&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Rental Office Equipment
             </p>
             <p>&nbsp;</p>
             <p>Ruang Cipta Nusantara hadir menjadi solusi untuk segala kebutuhan cetak custom Anda. <br>Kami siap
@@ -80,7 +87,7 @@
           <div class="container">
             <!-- Kategori produk baris pertama -->
             <div class="row text-center">
-              <div class="col-lg-4 col-sm-6">
+              <div class="col-lg-3 col-sm-6">
                 <div class="card">
                   <img src="images/produk/cover_depan_kategori/percetakan.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -92,7 +99,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-sm-6">
+              <div class="col-lg-3 col-sm-6">
                 <div class="card">
                   <img src="images/produk/cover_depan_kategori/souvenir.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -104,7 +111,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-sm-6">
+              <div class="col-lg-3 col-sm-6">
                 <div class="card">
                   <img src="images/produk/cover_depan_kategori/packaging.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -115,10 +122,7 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <!-- Kategori produk baris kedua -->
-            <div class="row text-center">
-              <div class="col-lg-4 col-sm-6">
+              <div class="col-lg-3 col-sm-6">
                 <div class="card">
                   <img src="images/produk/cover_depan_kategori/advertising.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -129,7 +133,10 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-sm-6">
+            </div>
+            <!-- Kategori produk baris kedua -->
+            <div class="row text-center">
+              <div class="col-lg-3 col-sm-6">
                 <div class="card">
                   <img src="images/produk/cover_depan_kategori/plakat.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -140,7 +147,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-sm-6">
+              <div class="col-lg-3 col-sm-6">
                 <div class="card">
                   <img src="images/produk/cover_depan_kategori/undangan.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
@@ -151,14 +158,109 @@
                   </div>
                 </div>
               </div>
+              <div class="col-lg-3 col-sm-6">
+                <div class="card">
+                  <img src="#" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Foto & Cinematography</h5>
+                    <!-- <p>Text
+                                        </p> -->
+                    <a href="#" class="btn btn-primary">Lihat</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6">
+                <div class="card">
+                  <img src="#" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Rental Office Equipment</h5>
+                    <!-- <p>Text
+                                        </p> -->
+                    <a href="#" class="btn btn-primary">Lihat</a>
+                  </div>
+                </div>
+              </div>
             </div>
             <br>
-            <hr>
           </div>
         </section>
 
+
+      <br>
+      <br>
+
+      <div class="black_bg">
+        <div class="container">
+          <section class="app_banner_main">
+            <div class="card-hightlight">
+              <span class="highlight-card">Pelanggan Kami<br>
+                <div class="row text-center">
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/our_customer/tel.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Tanjungenim Lestari <br> Pulp & Paper</h6>
+                        <!-- <p>Text
+                              </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/our_customer/bni.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Bank Negara Indonesia Tbk</h6>
+                        <!-- <p>Text
+                              </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/our_customer/pertamina.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Pertamina (Persero)</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/our_customer/pln.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Perusahaan Listrik Negara</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/our_customer/pama.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Pamapersada Nusantara</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-2 col-sm-6">
+                    <div class="card">
+                      <img src="images/our_customer/mandiri.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h6 class="card-title">PT Bank Mandiri</h6>
+                        <!-- <p>Text
+                                          </p> -->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </span>
+            </div>
+          </section>
+        </div>
       </div>
-    </div>
   </header>
 
   <!--  footer -->
